Fix tdf#64975: FORMATTING: autoIndent for Chinese should be two

characters. Now it detects CJK language and ident accordingly:
2 chars for Chinese and 1 chars for the others (Japanese and Korean).

Change-Id: Ib722e90ecae615faa7887ce1c874aacbb93f8a5e